# vossploee

./: .gitignore  README.md  default.env  pyproject.toml
src/vossploee/: WHOAMI.md  __init__.py  __main__.py  agent_context.py  agents.py  config.py  database.py  errors.py  main.py  models.py  repository.py  task_queue_intent.py  whoami.py  workers.py
src/vossploee/capabilities/: __init__.py  base.py  capability_settings.py  loader.py  readme.py
src/vossploee/capabilities/brainstormer/: README.md  __init__.py  architect.py  config.toml  implementer.py
src/vossploee/capabilities/consultant/: README.md  __init__.py  architect.py  implementer.py
src/vossploee/capabilities/core/: README.md  WHOAMI.md  __init__.py  architect.py  config.toml  dispatch.py  imap_tool.py  implementer.py  memory_tools.py  queue_tools.py  tools_register.py  worker_tool_context.py
src/vossploee/capabilities/haiku/: WHOAMI.md  __init__.py  config.toml
src/vossploee/capabilities/uw/: WHOAMI.md  __init__.py  config.toml  tools_register.py  upwork_api_tool.py
src/vossploee/channels/: base.py  loader.py  task_ingress.py
src/vossploee/channels/email/: __init__.py  channel.py
src/vossploee/channels/rest/: __init__.py  channel.py
src/vossploee/channels/telegram/: __init__.py  channel.py
src/vossploee/memory/: __init__.py  chroma_store.py  injector.py
src/vossploee/middleware/: reasoning.py
src/vossploee/roles/: base.py
src/vossploee/tools/: __init__.py  registry.py
tests/: test_api.py  test_capability_tools.py  test_scheduled_roots.py  test_task_queue_intent.py
(+4 files in other folders)
